add backward to draft and delete draft
